# champion-arena

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  TODO.MD  docker-compose.dev.yml  docker-compose.yml  example.env  start.sh
backend/: .flake8  Dockerfile  crud.py  database.py  docker-entrypoint.sh  external-data-postgres_localhost.xml  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 22db92c32dc1_default_values_for_bracket.py  3e00a8484e48_refactoring.py  3ec4fbe1c99b_add_tournament_bracket_match_status.py  4676866bd7f7_match_type_in_bracket_match.py  4bb4ae80dbed_added_export_last_updated_at_to_.py  5dd76feba4cb_add_applications_table.py  6b3780a08ed7_make_export_last_updated_at_timezone_.py  720e5c36d523_add_group_id_to_brackets.py  72113a80975d_initial_migration.py  9337f00d8598_change_timestamps_to_timezone.py  a7c9d21ef4b8_add_match_stage_fields.py  b9d2e3f4a1c7_normalize_repechage_match_fields.py  ba485a35aa38_default_sql_create_update_values.py  c1a2b3c4d5e6_add_bracket_placements.py  c753b78a5a9a_athlete_coach_m2m_migration.py  c94337081108_min_and_max_age_for_category.py  d8005fdfc93e_applications.py  ee60f1efb4bd_bracket_day.py  f1b2c3d4e5f6_add_timetable_entries.py
backend/assets/: round_template.drawio  template.drawio
backend/pdf_storage/: tmp.docx
backend/routers/: athlete.py  category.py  coach.py  tournament.py
backend/scripts/: display_brackets.py  import_data.py  test.py
backend/src/: cli.py  config.py  database.py  init_data.py  logger.py  main.py  middleware.py  models.py  schemas.py  storage.py  utils.py
backend/src/athletes/: crud.py  router.py
backend/src/auth/: router.py
backend/src/bracket_matches/: crud.py
backend/src/bracket_participants/: crud.py
backend/src/brackets/: crud.py  router.py
backend/src/categories/: crud.py  router.py
backend/src/coaches/: crud.py  router.py
backend/src/dependencies/: auth.py
backend/src/routers/: __init__.py  athletes.py  auth.py  brackets.py  categories.py  coaches.py  matches.py  sync.py  tournaments.py  upload.py  utils.py  websocket.py
backend/src/services/: auth.py  bracket.py  brackets.py  broadcast.py  docx.py  export_file.py  import_competitors.py  matches.py  serialize.py  storage.py  sync.py  sync_match_dto.py  tournaments.py  websocket_manager.py
backend/src/tournaments/: crud.py  router.py
backend/src/upload/: router.py
backend/tests/: models.py  test_api_responses.py  test_domain_contracts.py  test_sync_api.py  test_sync_structure_dto.py
domain/: Makefile  README.md  pyproject.toml
domain/champion_domain/: __init__.py  bracket_generation.py  bracket_policy.py  match_policy.py  match_results.py
domain/champion_domain/use_cases/: __init__.py  bracket_completion.py  bracket_labels.py  bracket_rebuild.py  finish_flow.py  finish_runtime.py  match_progression.py  placements.py  regeneration_planner.py  repechage_runtime.py  round_robin.py  single_elimination.py  structure_rebuild.py  structure_snapshot.py
domain/tests/: test_bracket_completion.py  test_bracket_labels.py  test_bracket_regeneration.py  test_finish_flow.py  test_finish_runtime.py  test_placements.py  test_policies.py  test_progression_action.py  test_regeneration_planner.py  test_repechage_policy.py  test_structure_snapshot.py  test_structure_snapshot_matrix.py
tatami/backend/: Dockerfile  pyproject.toml
tatami/backend/scripts/: decode_outbox_items.py
tatami/backend/src/: config.py  database.py  logger.py  main.py  models.py  schemas.py  utils.py
tatami/backend/tests/: test_domain_contracts.py  test_outbox.py  test_outbox_event_dto.py
(+350 files in other folders)
